<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Start.Login"
    android:padding="0dp">


    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#c0c0c0"
        android:id="@+id/linearLayoutLogin"
        android:layout_below="@+id/tool_bar"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tbxUsername"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/BenutzerName"
            android:layout_alignBaseline="@+id/tbxPassword"
            android:layout_alignBottom="@+id/tbxPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_blue"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tbxPassword"
            android:inputType="textPassword"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/Passwort"
            android:layout_above="@+id/btnLogin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:background="@drawable/rounded_corner_blue"
            android:padding="10dp"
            android:singleLine="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eingabenMerken"
            android:id="@+id/chbxRememberPw"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatischAnmelden"
            android:id="@+id/chbxAutoLogin"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:checked="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/btnLogin"
            android:layout_marginBottom="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/tbxPassword"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_corner_blue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#ffffff"
            android:elevation="5dp"
            android:layout_gravity="right"
            android:onClick="onClickBtnLogin"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</RelativeLayout>
