<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.dev_bros.workoutcenter.Start.Splash"
    android:background="#c0c0c0">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgLogoRe"
        android:layout_marginTop="104dp"
        android:elevation="5dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_gross"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/btnLogin"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/imgLogoRe"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_corner_blue"
        android:elevation="5dp"
        android:textColor="#ffffff"
        android:onClick="onClickBtnLogin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registrieren"
        android:id="@+id/btnRegistrieren"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner_blue"
        android:elevation="5dp"
        android:textColor="#ffffff"
        android:onClick="onClickBtnRegister" />
</RelativeLayout>
